bindings/bindings.h

// regex_t
// #include <regex.h>
typedef struct regex_t {
           size_t    __due_to_size[8];
} regex_t ;
// typedef struct _regex_t regex_t;
typedef ssize_t regoff_t;
typedef struct regmatch_t {
	regoff_t rm_so;
	regoff_t rm_eo;
} regmatch_t;
// typedef  _regmatch_t regmatch_t;

// added by us
struct FILE;
// // platform.h
typedef signed char smallint;
typedef unsigned char smalluint;
// // libbb.h
enum {
	LOGMODE_NONE = 0,
	LOGMODE_STDIO = (1 << 0),
	LOGMODE_SYSLOG = (1 << 1) * ENABLE_FEATURE_SYSLOG,
	LOGMODE_BOTH = LOGMODE_SYSLOG + LOGMODE_STDIO,
};
char *safe_strncpy(char *dst, const char *src, size_t size) FAST_FUNC;
void overlapping_strcpy(char *dst, const char *src) FAST_FUNC;
// #include <errno.h>
// # define errno (*bb_errno)
// void bb_die_memory_exhausted(void) NORETURN FAST_FUNC;
void bb_die_memory_exhausted(void) FAST_FUNC;
void bb_simple_error_msg(const char *s) FAST_FUNC;
// void bb_simple_perror_msg_and_die(const char *s) NORETURN FAST_FUNC;
void bb_simple_perror_msg_and_die(const char *s) FAST_FUNC;
// void bb_error_msg_and_die(const char *s, ...) __attribute__ ((noreturn, format (printf, 1, 2))) FAST_FUNC;
// void bb_simple_error_msg_and_die(const char *s) NORETURN FAST_FUNC;
// void bb_perror_msg_and_die(const char *s, ...) __attribute__ ((noreturn, format (printf, 1, 2))) FAST_FUNC;
// void bb_perror_msg(const char *s, ...) __attribute__ ((format (printf, 1, 2))) FAST_FUNC;
// void bb_verror_msg(const char *s, va_list p, const char *strerr) FAST_FUNC;
void bb_simple_perror_msg(const char *s) FAST_FUNC;
/* This struct is deliberately not defined. */
/* See docs/keep_data_small.txt */
struct globals;
/* '*const' ptr makes gcc optimize code much better.
 * Magic prevents ptr_to_globals from going into rodata.
 * If you want to assign a value, use SET_PTR_TO_GLOBALS(x) */
extern struct globals *const ptr_to_globals;
char *xstrdup(const char *s) FAST_FUNC RETURNS_MALLOC;
void xsetegid(gid_t egid) FAST_FUNC;
void xseteuid(uid_t euid) FAST_FUNC;
extern ssize_t full_write(int fd, const void *buf, size_t count) FAST_FUNC;
void *xmalloc(size_t size) FAST_FUNC RETURNS_MALLOC;
void *xzalloc(size_t size) FAST_FUNC RETURNS_MALLOC;
void *xrealloc(void *old, size_t size) FAST_FUNC;
extern char bb_process_escape_sequence(const char **ptr) FAST_FUNC;
char* strcpy_and_process_escape_sequences(char *dst, const char *src) FAST_FUNC;
char *utoa(unsigned n) FAST_FUNC;
char *itoa(int n) FAST_FUNC;
char *is_prefixed_with(const char *string, const char *key) FAST_FUNC;
char *is_suffixed_with(const char *string, const char *key) FAST_FUNC;
extern char *skip_whitespace(const char *) FAST_FUNC;
extern ssize_t safe_read(int fd, void *buf, size_t count) FAST_FUNC;
char *xstrndup(const char *s, int n) FAST_FUNC RETURNS_MALLOC;
/* Variable */
typedef struct var_s {
	unsigned type;            /* flags */
	double number;
	char *string;
	union {
		int aidx;               /* func arg idx (for compilation stage) */
		struct xhash_s *array;  /* array ptr */
		struct var_s *parent;   /* for func args, ptr to actual parameter */
		walker_list *walker;    /* list of array elements (for..in) */
	} x;
} var;
/* Node chain (pattern-action chain, BEGIN, END, function bodies) */
typedef struct chain_s {
	struct node_s *first;
	struct node_s *last;
	const char *programname;
} chain;
/* I/O stream */
typedef struct rstream_s {
	struct FILE *F;
	char *buffer;
	int adv;
	int size;
	int pos;
	smallint is_pipe;
} rstream;
typedef struct xhash_s {
	unsigned nel;           /* num of elements */
	unsigned csize;         /* current hash size */
	unsigned nprime;        /* next hash size in PRIMES[] */
	unsigned glen;          /* summary length of item names */
	struct hash_item_s **items;
} xhash;
/* Tree node */
typedef struct node_s {
	uint32_t info;
	unsigned lineno;
	union {
		struct node_s *n;
		var *v;
		int aidx;
		char *new_progname;
		regex_t *re;
	} l;
	union {
		struct node_s *n;
		regex_t *ire;
		func *f;
	} r;
	union {
		struct node_s *n;
	} a;
} node;
/* Block of temporary variables */
typedef struct nvblock_s {
	int size;
	var *pos;
	struct nvblock_s *prev;
	struct nvblock_s *next;
	// var nv[];
} nvblock;
/* Globals. Split in two parts so that first one is addressed
 * with (mostly short) negative offsets.
 * NB: it's unsafe to put members of type "double"
 * into globals2 (gcc may fail to align them).
 */
struct globals {
	double t_double;
	chain beginseq, mainseq, endseq;
	chain *seq;
	node *break_ptr, *continue_ptr;
	rstream *iF;
	xhash *vhash, *ahash, *fdhash, *fnhash;
	const char *g_progname;
	int g_lineno;
	int nfields;
	int maxfields; /* used in fsrealloc() only */
	var *Fields;
	nvblock *g_cb;
	char *g_pos;
	char *g_buf;
	smallint icase;
	smallint exiting;
	smallint nextrec;
	smallint nextfile;
	smallint is_f0_split;
	smallint t_rollback;
};